[gd_scene load_steps=2 format=3 uid="uid://crxdcno7aqioc"]

[ext_resource type="Script" path="res://ui/main_menu.gd" id="1_tvsr0"]

[node name="CanvasLayer" type="CanvasLayer"]

[node name="MainMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tvsr0")

[node name="PanelContainer" type="PanelContainer" parent="MainMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="MainMenu/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MainMenu/PanelContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/PanelContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MainMenu/PanelContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 10

[node name="Label" type="Label" parent="MainMenu/PanelContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
text = "MAIN_MENU_TITLE"
horizontal_alignment = 1

[node name="NewGameButton" type="Button" parent="MainMenu/PanelContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "NEW_GAME_BUTTON_TOOLTIP"
focus_neighbor_top = NodePath("../QuitButton")
focus_previous = NodePath("../QuitButton")
text = "NEW_GAME_BUTTON"

[node name="ContinueButton" type="Button" parent="MainMenu/PanelContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "LOAD_BUTTON_TOOLTIP"
text = "CONTINUE_BUTTON"

[node name="QuitButton" type="Button" parent="MainMenu/PanelContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../NewGameButton")
focus_next = NodePath("../NewGameButton")
text = "QUIT_BUTTON"

[connection signal="pressed" from="MainMenu/PanelContainer/PanelContainer/MarginContainer/VBoxContainer/NewGameButton" to="MainMenu" method="_on_new_game_button_pressed"]
[connection signal="pressed" from="MainMenu/PanelContainer/PanelContainer/MarginContainer/VBoxContainer/ContinueButton" to="MainMenu" method="_on_continue_button_pressed"]
[connection signal="pressed" from="MainMenu/PanelContainer/PanelContainer/MarginContainer/VBoxContainer/QuitButton" to="MainMenu" method="_on_quit_button_pressed"]
